--- a/sevices/irap.html
+++ b/sevices/irap.html
@@ -96,49 +96,48 @@
 
             <div class="categories__grid">
               <div class="categories__grid__card" data-animation="news">
-                <h5 class="categories__grid__header">Security Risk Management
-                </h5>
+                <h5 class="categories__grid__header">Security Operation Centres</h5>
 
                 <p class="categories__grid__label">
                   We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to
                   enable informed decision making
                 </p>
-                <a class="categories__grid__button" href="../sevices/security-risk.html">Learn More</a>
+                <a class="categories__grid__button" href="./security-operation-centres.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
                 <h5 class="categories__grid__header">
-                  Governance
+                  Vulnerability Management</h5>
+
+                <p class="categories__grid__label">
+                  We identify, classify, scan for and report on threats and vulnerabilities impacting your digital assets
+                </p>
+                <a class="categories__grid__button" href="./vulnerability-management.html">Learn More</a>
+              </div>
+
+              <div class="categories__grid__card" data-animation="news">
+                <h5 class="categories__grid__header">
+                  Threat Intelligence
+
                 </h5>
 
                 <p class="categories__grid__label">
-                  We develop enterprise governance frameworks, policies and processes based on industry best practice
+                  We provide threat intelligence analysis and reporting enabling informed strategic decision making
                 </p>
-                <a class="categories__grid__button" href="../sevices/governance.html">Learn More</a>
+                <a class="categories__grid__button" href="./threat-intelligence.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
                 <h5 class="categories__grid__header">
-                  Compliance & Audit
+                  Gateway &amp; Network Security
 
-                </h5>
-
-                <p class="categories__grid__label">
-                  We conduct security audits on your information systems and provide audit advisory services
-                </p>
-                <a class="categories__grid__button" href="../sevices/compliance-audit.html">Learn More</a>
-              </div>
-
-              <div class="categories__grid__card" data-animation="news">
-                <h5 class="categories__grid__header">
-                  IRAP
                 </h5>
 
                 <p class="categories__grid__label">
                   We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you
                   prepare for security certifications or conduct IRAP Assessments on your information systems
                 </p>
-                <a class="categories__grid__button" href="../sevices/irap.html">Learn More</a>
+                <a class="categories__grid__button" href="./gateway-network-security.html">Learn More</a>
               </div>
 
             </div>
