--- a/cyber_security.html
+++ b/cyber_security.html
@@ -147,7 +147,7 @@
                     We provide expertise and guidance to build and embed cyber security solutions and manage risk based on best practice.
 
                   </p>
-                  <a class="categories__grid__button" href="./sevices/security-advisory.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/security-advisory.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -158,7 +158,7 @@
                   <p class="categories__grid__label">
                     We provide CISOs and ITSAs that interpret and translate complex information security issues and effectively manage risk
                   </p>
-                  <a class="categories__grid__button" href="./sevices/ciso.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/ciso.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -170,7 +170,7 @@
                   <p class="categories__grid__label">
                     We provide guidance and support with your Defence Industry Security Program (DISP) membership application
                   </p>
-                  <a class="categories__grid__button" href="./sevices/security-officer.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/security-officer.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -181,7 +181,7 @@
                   <p class="categories__grid__label">
                     We provide comprehensive review and assessment of your current infrastructure and plan and develop options for future information security solutions
                   </p>
-                  <a class="categories__grid__button" href="./sevices/security-analysis-review.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/security-analysis-review.html">Learn More</a>
                 </div>
 
               </div>
@@ -197,7 +197,7 @@
                   <p class="categories__grid__label">
                     We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to enable informed decision making
                   </p>
-                  <a class="categories__grid__button" href="./sevices/security-risk.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/security-risk.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -208,7 +208,7 @@
                   <p class="categories__grid__label">
                     We develop enterprise governance frameworks, policies and processes based on industry best practice
                   </p>
-                  <a class="categories__grid__button" href="./sevices/governance.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/governance.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -220,7 +220,7 @@
                   <p class="categories__grid__label">
                     We conduct security audits on your information systems and provide audit advisory services
                   </p>
-                  <a class="categories__grid__button" href="./sevices/compliance-audit.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/compliance-audit.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -231,7 +231,7 @@
                   <p class="categories__grid__label">
                     We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you prepare for security certifications or conduct IRAP Assessments on your information systems
                   </p>
-                  <a class="categories__grid__button" href="./sevices/irap.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/irap.html">Learn More</a>
                 </div>
 
               </div>
@@ -247,7 +247,7 @@
                   <p class="categories__grid__label">
                     We provide end to end security architecture advice, design and build service to support the implementation and maintenance of your security systems
                   </p>
-                  <a class="categories__grid__button" href="./sevices/security-architecture-design.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/security-architecture-design.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -259,7 +259,7 @@
                   <p class="categories__grid__label">
                     We implement security technologies and solutions and integrate them with existing architecture
                   </p>
-                  <a class="categories__grid__button" href="./sevices/security-solution-integration.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/security-solution-integration.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -271,7 +271,7 @@
                   <p class="categories__grid__label">
                     We help you protect your organisation from unauthorised access or modification by adopting the most appropriate policies and practices to ensure you stay in control of your organisations’ data without exceptions
                   </p>
-                  <a class="categories__grid__button" href="./sevices/gateway-network-security.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/gateway-network-security.html">Learn More</a>
                 </div>
 
               </div>
@@ -288,7 +288,7 @@
                   <p class="categories__grid__label">
                     We provide personalised Cloud architecture to improve collaboration and productivity within your business
                   </p>
-                  <a class="categories__grid__button" href="./sevices/cloud-security.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/cloud-security.html">Learn More</a>
                 </div>
 
               </div>
@@ -305,7 +305,7 @@
                   <p class="categories__grid__label">
                     We help you scope, plan and execute penetration tests
                   </p>
-                  <a class="categories__grid__button" href="./sevices/penetration-testing.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/penetration-testing.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -316,7 +316,7 @@
                   <p class="categories__grid__label">
                     We assess your architecture, systems and networks for vulnerabilities that may be a threat to your organisation
                   </p>
-                  <a class="categories__grid__button" href="./sevices/vulnerability-assessment.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/vulnerability-assessment.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -327,7 +327,7 @@
                   <p class="categories__grid__label">
                     We test your digital, physical and workforce environments with a simulated cyber-intrusion using real-world attack methods
                   </p>
-                  <a class="categories__grid__button" href="./sevices/red-blue-purple-team.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/red-blue-purple-team.html">Learn More</a>
                 </div>
 
               </div>
@@ -343,7 +343,7 @@
                   <p class="categories__grid__label">
                     We deliver Security Operations Centres for your organisation
                   </p>
-                  <a class="categories__grid__button" href="./sevices/security-operation-centres.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/security-operation-centres.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -353,7 +353,7 @@
                   <p class="categories__grid__label">
                     We identify, classify, scan for and report on threats and vulnerabilities impacting your digital assets
                   </p>
-                  <a class="categories__grid__button" href="./sevices/vulnerability-management.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/vulnerability-management.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -365,7 +365,7 @@
                   <p class="categories__grid__label">
                     We provide threat intelligence analysis and reporting enabling informed strategic decision making
                   </p>
-                  <a class="categories__grid__button" href="./sevices/threat-intelligence.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/threat-intelligence.html">Learn More</a>
                 </div>
 
               </div>
@@ -384,7 +384,7 @@
                   <p class="categories__grid__label">
                     We conduct digital forensic investigations and analysis that spans across a broad range of cases
                   </p>
-                  <a class="categories__grid__button" href="./sevices/digital-forensics.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/digital-forensics.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -396,7 +396,7 @@
                   <p class="categories__grid__label">
                     We thoroughly investigate attacker activities and determine the root cause of compromised networks and systems through our threat hunting and scanning capabilities
                   </p>
-                  <a class="categories__grid__button" href="./sevices/incident-response.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/incident-response.html">Learn More</a>
                 </div>
 
                 <div class="categories__grid__card" data-animation="news">
@@ -408,7 +408,7 @@
                   <p class="categories__grid__label">
                     We help your organisation navigate and resolve issues and maintain a strong and resilient security posture
                   </p>
-                  <a class="categories__grid__button" href="./sevices/crisis-management-response.html">Learn More</a>
+                  <a class="categories__grid__button" href="./services/crisis-management-response.html">Learn More</a>
                 </div>
 
               </div>
