--- a/services/ciso.html
+++ b/services/ciso.html
@@ -63,31 +63,28 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Security Operation Centres
+              CISO / ITSA as a Service
 
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Security Operation Centres?
+                What is CISO / ITSA as a Service?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Our Security Operation Centre service helps your organisation see your entire IT estate at all times
-                enabling complete visibility helping you identify suspicious activity and ensuring you have an up to
-                date view of possible threats.
-
+                CISCO / ITSA services provides cyber security support and advice to your senior management and staff.
+                This service helps you ensure your digital information that is stored, processed and communicated by
+                your information systems is secured
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Operation Centres?
+                Why Five Eyes CISO / ITSA as a Service?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting delivers and operates Security Operation Centres for your organisation by
-                anticipating and efficiently identifying and monitoring threats with Security Incident and Event
-                Management monitoring, triage and alerting, immediately notifying you of cyber threats across systems,
-                networks and devices.
-
+                Five Eyes Consulting has highly experienced Cyber Security professionals capable of interpreting and
+                translating complex cyber issues into the language of business. Our CISOs and ITSAs are both digital and
+                business natives, who are focused on effectively and efficiently managing cyber risk
               </p>
             </div>
 
@@ -104,7 +101,7 @@
                   We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to
                   enable informed decision making
                 </p>
-                <a class="categories__grid__button" href="../sevices/security-risk.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/security-risk.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -115,7 +112,7 @@
                 <p class="categories__grid__label">
                   We develop enterprise governance frameworks, policies and processes based on industry best practice
                 </p>
-                <a class="categories__grid__button" href="../sevices/governance.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/governance.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -127,7 +124,7 @@
                 <p class="categories__grid__label">
                   We conduct security audits on your information systems and provide audit advisory services
                 </p>
-                <a class="categories__grid__button" href="../sevices/compliance-audit.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/compliance-audit.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -139,14 +136,14 @@
                   We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you
                   prepare for security certifications or conduct IRAP Assessments on your information systems
                 </p>
-                <a class="categories__grid__button" href="../sevices/irap.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/irap.html">Learn More</a>
               </div>
 
             </div>
 
             <br>
             <p style="text-align: right;">
-              <a href="../cyber_security.html">View all Services</a>
+              <a href="../services.html">View all Services</a>
             </p>
 
           </section>
