--- a/services/red-blue-purple-team.html
+++ b/services/red-blue-purple-team.html
@@ -63,31 +63,24 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Incident Response
+              Red, Blue & Purple Team Testing
 
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Incident Response?
-
+                What is Red, Blue & Purple Team Testing?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                An incident is an event that could lead to loss of or disruption to and organisations operations,
-                services or functions. Our incident response services helps your organisation identify, analyse and
-                resolve security incidents to prevent re-occurrence.
-
+                Our Red and Blue Team services use real world techniques to exploit weaknesses in your organisations’ processes and technologies as well as protect them by monitoring your corporate networks, conducting internal and external vulnerability scan and implementing controls
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Incident Response?
-
+                Why Five Eyes Red, Blue & Purple Team Testing?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting supports your organisation to thoroughly investigate attacker activities and
-                determine the root cause of compromised networks and systems through our threat hunting and scanning
-                capabilities
+                We conduct testing of your digital, physical and workforce environments with a simulated cyber-intrusion using real-world attack methods and guidance to assess vulnerabilities and how to safeguard against future attacks
               </p>
             </div>
 
@@ -101,10 +94,9 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to
-                  enable informed decision making
+                  We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to enable informed decision making
                 </p>
-                <a class="categories__grid__button" href="../sevices/security-risk.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/security-risk.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -115,7 +107,7 @@
                 <p class="categories__grid__label">
                   We develop enterprise governance frameworks, policies and processes based on industry best practice
                 </p>
-                <a class="categories__grid__button" href="../sevices/governance.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/governance.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -127,7 +119,7 @@
                 <p class="categories__grid__label">
                   We conduct security audits on your information systems and provide audit advisory services
                 </p>
-                <a class="categories__grid__button" href="../sevices/compliance-audit.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/compliance-audit.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -136,10 +128,9 @@
                 </h5>
 
                 <p class="categories__grid__label">
-                  We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you
-                  prepare for security certifications or conduct IRAP Assessments on your information systems
+                  We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you prepare for security certifications or conduct IRAP Assessments on your information systems
                 </p>
-                <a class="categories__grid__button" href="../sevices/irap.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/irap.html">Learn More</a>
               </div>
 
             </div>
@@ -151,7 +142,7 @@
 
           </section>
 
-
+          
 
 
 
