--- a/services/security-operation-centres.html
+++ b/services/security-operation-centres.html
@@ -63,32 +63,30 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Penetration Testing
+              Security Operation Centres
 
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Penetration Testing?
+                What is Security Operation Centres?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Our Penetration Testing service is a form of ethical hacking launching intentional simulated cyber
-                attacks using strategies ad tools designed to access or exploit your computer systems, networks,
-                websites and applications. We do this to identify exploitable issues so that effective security controls
-                can be implemented as well as to test the robustness of your security policies and regulatory
-                compliance.
+                Our Security Operation Centre service helps your organisation see your entire IT estate at all times
+                enabling complete visibility helping you identify suspicious activity and ensuring you have an up to
+                date view of possible threats.
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Penetration Testing?
-
+                Why Five Eyes Security Operation Centres?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                We have extensive experience in performing penetration tests across a wide range of Government and
-                Private entities. Our people are qualified ethical hackers that work with you to scope, plan, and
-                execute the penetration test whilst being cognisant of business and operational needs.
+                Five Eyes Consulting delivers and operates Security Operation Centres for your organisation by
+                anticipating and efficiently identifying and monitoring threats with Security Incident and Event
+                Management monitoring, triage and alerting, immediately notifying you of cyber threats across systems,
+                networks and devices.
 
               </p>
             </div>
@@ -106,7 +104,7 @@
                   We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to
                   enable informed decision making
                 </p>
-                <a class="categories__grid__button" href="../sevices/security-risk.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/security-risk.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -117,7 +115,7 @@
                 <p class="categories__grid__label">
                   We develop enterprise governance frameworks, policies and processes based on industry best practice
                 </p>
-                <a class="categories__grid__button" href="../sevices/governance.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/governance.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -129,7 +127,7 @@
                 <p class="categories__grid__label">
                   We conduct security audits on your information systems and provide audit advisory services
                 </p>
-                <a class="categories__grid__button" href="../sevices/compliance-audit.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/compliance-audit.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -141,7 +139,7 @@
                   We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you
                   prepare for security certifications or conduct IRAP Assessments on your information systems
                 </p>
-                <a class="categories__grid__button" href="../sevices/irap.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/irap.html">Learn More</a>
               </div>
 
             </div>
