--- a/services/incident-response.html
+++ b/services/incident-response.html
@@ -63,26 +63,31 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Security Advisory
+              Incident Response
+
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Security Analysis & Review (change from discovery and assessment)?
+                What is Incident Response?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Security analysis and review services helps your organisation identify and resolve security related
-                issues in your current infrastructure and systems through in depth analysis and review.
+                An incident is an event that could lead to loss of or disruption to and organisations operations,
+                services or functions. Our incident response services helps your organisation identify, analyse and
+                resolve security incidents to prevent re-occurrence.
 
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Analysis & Review (change from discovery and assessment)?
+                Why Five Eyes Incident Response?
+
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting conducts comprehensively review and assessment of your infrastructure and plan and
-                develop options paper for future networks, security, cloud, collaboration and mobility capabilities
+                Five Eyes Consulting supports your organisation to thoroughly investigate attacker activities and
+                determine the root cause of compromised networks and systems through our threat hunting and scanning
+                capabilities
               </p>
             </div>
 
@@ -99,7 +104,7 @@
                   We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to
                   enable informed decision making
                 </p>
-                <a class="categories__grid__button" href="../sevices/security-risk.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/security-risk.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -110,7 +115,7 @@
                 <p class="categories__grid__label">
                   We develop enterprise governance frameworks, policies and processes based on industry best practice
                 </p>
-                <a class="categories__grid__button" href="../sevices/governance.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/governance.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -122,7 +127,7 @@
                 <p class="categories__grid__label">
                   We conduct security audits on your information systems and provide audit advisory services
                 </p>
-                <a class="categories__grid__button" href="../sevices/compliance-audit.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/compliance-audit.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -134,7 +139,7 @@
                   We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you
                   prepare for security certifications or conduct IRAP Assessments on your information systems
                 </p>
-                <a class="categories__grid__button" href="../sevices/irap.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/irap.html">Learn More</a>
               </div>
 
             </div>
@@ -143,7 +148,7 @@
             <p style="text-align: right;">
               <a href="../cyber_security.html">View all Services</a>
             </p>
-            
+
           </section>
 
 
