--- a/services/penetration-testing.html
+++ b/services/penetration-testing.html
@@ -63,30 +63,32 @@
         <div class="content" data-template="service">
           <section class="service" id="service">
             <h1 class="service__title" data-animation="title">
-              Security Solution Integration
+              Penetration Testing
 
             </h1>
 
             <div class="service__info">
               <p class="service__info__question" data-animation="paragraph">
-                What is Security Solution Integration?
-
+                What is Penetration Testing?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Security Solution Integration services supports your organisation merge physical security applications,
-                such as access control and security applications into a single, comprehensive system.
+                Our Penetration Testing service is a form of ethical hacking launching intentional simulated cyber
+                attacks using strategies ad tools designed to access or exploit your computer systems, networks,
+                websites and applications. We do this to identify exploitable issues so that effective security controls
+                can be implemented as well as to test the robustness of your security policies and regulatory
+                compliance.
+
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Solution Integration?
+                Why Five Eyes Penetration Testing?
 
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
-                Five Eyes Consulting has a comprehensive capability of skilled Security Engineers and Architects that
-                are well versed in various technologies allowing us to successfully support your organisation implement
-                new security technologies and solutions and ensure they integrate with existing systems whilst
-                maintaining your organisations’ security posture.
+                We have extensive experience in performing penetration tests across a wide range of Government and
+                Private entities. Our people are qualified ethical hackers that work with you to scope, plan, and
+                execute the penetration test whilst being cognisant of business and operational needs.
 
               </p>
             </div>
@@ -104,7 +106,7 @@
                   We provide pragmatic, detailed and actionable risk management to help manage the risk trade-off to
                   enable informed decision making
                 </p>
-                <a class="categories__grid__button" href="../sevices/security-risk.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/security-risk.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -115,7 +117,7 @@
                 <p class="categories__grid__label">
                   We develop enterprise governance frameworks, policies and processes based on industry best practice
                 </p>
-                <a class="categories__grid__button" href="../sevices/governance.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/governance.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -127,7 +129,7 @@
                 <p class="categories__grid__label">
                   We conduct security audits on your information systems and provide audit advisory services
                 </p>
-                <a class="categories__grid__button" href="../sevices/compliance-audit.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/compliance-audit.html">Learn More</a>
               </div>
 
               <div class="categories__grid__card" data-animation="news">
@@ -139,11 +141,10 @@
                   We provide qualified Information Security Registered Assessors Program (IRAP) Assessors that help you
                   prepare for security certifications or conduct IRAP Assessments on your information systems
                 </p>
-                <a class="categories__grid__button" href="../sevices/irap.html">Learn More</a>
+                <a class="categories__grid__button" href="../services/irap.html">Learn More</a>
               </div>
 
             </div>
-
 
             <br>
             <p style="text-align: right;">
